error3.log
    Checking log v0.4.29
    Checking smallvec v1.15.1
    Checking slab v0.4.12
    Checking windows-sys v0.61.2
    Checking bitflags v2.11.0
    Checking winapi v0.3.9
    Checking libc v0.2.183
    Checking either v1.15.0
   Compiling phf_macros v0.11.3
    Checking thiserror v1.0.69
    Checking bytemuck v1.25.0
    Checking windows-sys v0.48.0
    Checking futures-util v0.3.32
    Checking parking_lot_core v0.9.12
    Checking encase v0.3.0
    Checking rayon v1.11.0
    Checking gpu-descriptor-types v0.1.2
    Checking error-code v2.3.1
    Checking raw-window-handle v0.3.4
    Checking gpu-descriptor v0.2.4
    Checking parking_lot v0.12.5
    Checking phf v0.11.3
    Checking winit v0.27.5
    Checking winapi-util v0.1.11
    Checking termcolor v1.4.1
    Checking palette v0.6.1
    Checking rfd v0.12.1
    Checking codespan-reporting v0.11.1
    Checking naga v0.11.1
    Checking iced_core v0.9.0
    Checking glyph_brush_draw_cache v0.1.6
    Checking futures-executor v0.3.32
    Checking libloading v0.7.4
    Checking gpu-allocator v0.22.0
    Checking clipboard-win v4.5.0
    Checking iced_style v0.8.0
    Checking d3d12 v0.6.0
    Checking hassle-rs v0.9.0
    Checking ash v0.37.3+1.3.251
    Checking khronos-egl v4.1.0
    Checking futures v0.3.32
    Checking window_clipboard v0.2.4
    Checking glyph_brush v0.7.12
    Checking iced_futures v0.6.0
    Checking iced_native v0.10.3
    Checking iced_graphics v0.8.0
    Checking iced_winit v0.9.1
    Checking wgpu-hal v0.15.4
    Checking wgpu-core v0.15.1
    Checking wgpu v0.15.1
    Checking wgpu_glyph v0.19.0
    Checking iced_wgpu v0.10.0
    Checking iced v0.9.0
    Checking app v0.1.0 (D:\Projects\ModernNotepadPlusPlus\app)
warning: unused import: `max`
 --> app\src\core\buffer.rs:3:16
  |
3 | use std::cmp::{max, min};
  |                ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `app` (lib) generated 1 warning (run `cargo fix --lib -p app` to apply 1 suggestion)
warning: unused imports: `Length`, `Space`, `column`, `container`, and `row`
 --> app\src\main.rs:2:63
  |
2 |     Application, Settings, Theme, executor, Command, Element, Length,
  |                                                               ^^^^^^
3 |     widget::{column, row, text, button, text_input, Space, container},
  |              ^^^^^^  ^^^                            ^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `iced_native::element::Element<'_, _, _>: From<String>` is not satisfied
   --> app\src\main.rs:120:28
    |
120 |                     button(label).on_press(Message::TabSelected(i)).into()
    |                     ------ ^^^^^ the trait `From<String>` is not implemented for `iced_native::element::Element<'_, _, _>`
    |                     |
    |                     required by a bound introduced by this call
    |
    = help: the following other types implement trait `From<T>`:
              `iced_native::element::Element<'_, Message, Renderer>` implements `From<&str>`
              `iced_native::element::Element<'_, Message, Renderer>` implements `From<VerticalSlider<'_, T, Message, Renderer>>`
              `iced_native::element::Element<'_, Message, Renderer>` implements `From<iced::widget::ProgressBar<Renderer>>`
              `iced_native::element::Element<'_, Message, Renderer>` implements `From<iced::widget::Rule<Renderer>>`
              `iced_native::element::Element<'_, Message, Renderer>` implements `From<iced::widget::Slider<'_, T, Message, Renderer>>`
              `iced_native::element::Element<'_, Message, Renderer>` implements `From<iced::widget::Space>`
              `iced_native::element::Element<'_, Message, Renderer>` implements `From<iced_native::overlay::menu::List<'_, T, Renderer>>`
              `iced_native::element::Element<'_, Message, Renderer>` implements `From<iced_native::widget::button::Button<'_, Message, Renderer>>`
            and 16 others
    = note: required for `String` to implement `Into<iced_native::element::Element<'_, _, _>>`
note: required by a bound in `button`
   --> C:\Users\MinasyL\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\iced_native-0.10.3\src\widget\helpers.rs:83:19
    |
 82 | pub fn button<'a, Message, Renderer>(
    |        ------ required by a bound in this function
 83 |     content: impl Into<Element<'a, Message, Renderer>>,
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `button`

For more information about this error, try `rustc --explain E0277`.
warning: `app` (bin "app") generated 1 warning
error: could not compile `app` (bin "app") due to 1 previous error; 1 warning emitted
